--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-
+  <meta name="google-site-verification" content="CcWD-WFlQ7dz4h6LOSGlCQQHGu6ozqd3NszVQkcaEko" />
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
